--- a/package.json
+++ b/package.json
@@ -7,5 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/krfisc88/secrets-app.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/krfisc88/secrets-app/issues"
+  },
+  "homepage": "https://github.com/krfisc88/secrets-app#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  }
 }
